# nimbus

./: .clang-format  .gitignore  CMakeLists.txt  imgui.ini  nimbus.code-workspace  vcpkg.json
felix/include/panels/: cameraMenuPanel.hpp  consolePanel.hpp  editCameraMenuPanel.hpp  renderStatsPanel.hpp  resourcePanel.hpp  sceneControlPanel.hpp  sceneHierarchyPanel.hpp  viewportPanel.hpp
felix/src/: felix.cpp
include/: application.hpp  camera.hpp  common.hpp  core.hpp  entry.hpp  event.hpp  keyCode.hpp  layer.hpp  layerDeck.hpp  log.hpp  mesh.hpp  model.hpp  nimbus.hpp  nmpch.hpp  renderer.hpp  resourceManager.hpp  shader.hpp  sprite.hpp  texture.hpp  utility.hpp  window.hpp
include/guiLayers/: engineGui.hpp  guiSubsystem.hpp
include/nimbus/: application.hpp  layer.hpp  layerDeck.hpp  log.hpp  nmpch.hpp  resourceManager.hpp  utility.hpp  window.hpp
include/nimbus/core/: application.hpp  common.hpp  core.hpp  entry.hpp  event.hpp  guid.hpp  keyCode.hpp  layer.hpp  layerDeck.hpp  log.hpp  mouseButton.hpp  nmpch.hpp  ref.hpp  resourceManager.hpp  stopwatch.hpp  types.hpp  utility.hpp  window.hpp
include/nimbus/guiLayers/: engineGui.hpp  guiSubsystem.hpp
include/nimbus/guiSubsystem/: guiSubsystem.hpp  widgets.hpp
include/nimbus/physics/: physics2D.hpp
include/nimbus/renderer/: buffer.hpp  camera.hpp  font.hpp  fontData.hpp  frameBuffer.hpp  framebuffer.hpp  graphicsApi.hpp  mesh.hpp  model.hpp  particleEmitter.hpp  renderCmdQ.hpp  renderThread.hpp  renderer.hpp  renderer2D.hpp  shader.hpp  sprite.hpp  texture.hpp
include/nimbus/scene/: camera.hpp  component.hpp  entity.hpp  entityLogic.hpp  scene.hpp  sceneSerializer.hpp
include/platform/: buffer.hpp  graphicsApi.hpp  rendererApi.hpp
include/platform/gl/: glBuffer.hpp  glFrameBuffer.hpp  glFramebuffer.hpp  glGraphicsApi.hpp  glShader.hpp  glTexture.hpp
include/renderer/: font.hpp  fontData.hpp  frameBuffer.hpp  mesh.hpp  model.hpp  particle.hpp  particleEmitter.hpp  renderer.hpp  renderer2D.hpp  shader.hpp  sprite.hpp  texture.hpp
nimbus/include/: nimbus.hpp
nimbus/include/nimbus/core/: application.hpp  common.hpp  core.hpp  entry.hpp  event.hpp  guid.hpp  keyCode.hpp  layer.hpp  layerDeck.hpp  log.hpp  mouseButton.hpp  nmpch.hpp  resourceManager.hpp  stopwatch.hpp  types.hpp  utility.hpp  window.hpp
nimbus/include/nimbus/guiSubsystem/: guiSubsystem.hpp  widgets.hpp
nimbus/include/nimbus/physics/: physics2D.hpp
nimbus/include/nimbus/platform/gl/: glBuffer.hpp  glFramebuffer.hpp  glGraphicsApi.hpp  glShader.hpp  glTexture.hpp
nimbus/include/nimbus/platform/os/: export.hpp  headers.h  headers.hpp  os.h  os.hpp
nimbus/include/nimbus/renderer/: buffer.hpp  font.hpp  fontData.hpp  framebuffer.hpp  graphicsApi.hpp  mesh.hpp  model.hpp  particleEmitter.hpp  renderCmdQ.hpp  renderThread.hpp  renderer.hpp  renderer2D.hpp  shader.hpp  texture.hpp
nimbus/include/nimbus/scene/: camera.hpp  component.hpp  entity.hpp  entityLogic.hpp  scene.hpp  sceneSerializer.hpp
nimbus/include/nimbus/script/: internalCalls.hpp  scriptEngine.hpp
nimbus/include/nimbus/script/internalCalls/: internalCalls.hpp
nimbus/src/core/: application.cpp  event.cpp  layer.cpp  layerDeck.cpp  log.cpp  resourceManager.cpp  utility.cpp  window.cpp
nimbus/src/guiSubsystem/: guiSubsystem.cpp
nimbus/src/physics/: physics2D.cpp
nimbus/src/platform/gl/: glBuffer.cpp  glFramebuffer.cpp  glGraphicsApi.cpp  glShader.cpp  glTexture.cpp
nimbus/src/renderer/: buffer.cpp  font.cpp  framebuffer.cpp  graphicsApi.cpp  mesh.cpp  model.cpp  particleEmitter.cpp  renderThread.cpp  renderer.cpp  renderer2D.cpp  shader.cpp  sprite.cpp  texture.cpp
nimbus/src/scene/: camera.cpp  scene.cpp  sceneSerializer.cpp
nimbus/src/script/: internalCalls.cpp  scriptEngine.cpp
nimbus/src/script/internalCalls/: internalCalls.cpp
resources/scriptCore/: component.cs  core.cs  entity.cs  internalCalls.cs  keyCode.cs  mouseButton.cs  scriptCore.cs  util.cs  vec.cs
resources/scripts/: script.cs  scripts.csproj
resources/shaders/: quad.f.glsl  quad.v.glsl  text.f.glsl  text.v.glsl
src/: application.cpp  camera.cpp  event.cpp  layer.cpp  layerDeck.cpp  log.cpp  mesh.cpp  model.cpp  renderer.cpp  resourceManager.cpp  shader.cpp  sprite.cpp  texture.cpp  window.cpp
src/guiLayers/: engineGui.cpp  guiSubsystem.cpp
src/nimbus/: application.cpp  camera.cpp  event.cpp  layer.cpp  layerDeck.cpp  log.cpp  resourceManager.cpp  utility.cpp  window.cpp
src/nimbus/core/: application.cpp  event.cpp  guid.cpp  layerDeck.cpp  log.cpp  ref.cpp  resourceManager.cpp  utility.cpp  window.cpp
src/nimbus/guiLayers/: engineGui.cpp  guiSubsystem.cpp
src/nimbus/guiSubsystem/: guiSubsystem.cpp
src/nimbus/physics/: physics2D.cpp
src/nimbus/renderer/: buffer.cpp  camera.cpp  font.cpp  frameBuffer.cpp  framebuffer.cpp  graphicsApi.cpp  mesh.cpp  model.cpp  particleEmitter.cpp  renderCmdQ.cpp  renderThread.cpp  renderer.cpp  renderer2D.cpp  shader.cpp  sprite.cpp  texture.cpp
src/nimbus/scene/: camera.cpp  scene.cpp  sceneSerializer.cpp
src/nimbus/script/: scriptEngine.cpp
src/platform/: buffer.cpp  graphicsApi.cpp  rendererApi.cpp
src/platform/gl/: glBuffer.cpp  glFrameBuffer.cpp  glFramebuffer.cpp  glGraphicsApi.cpp  glShader.cpp  glTexture.cpp
src/renderer/: font.cpp  frameBuffer.cpp  mesh.cpp  model.cpp  particle.cpp  particleEmitter.cpp  renderer.cpp  renderer2D.cpp  shader.cpp  sprite.cpp  texture.cpp
